- All guns now use the bow holding pose for aiming in 3rd person.
- Fixed the Crucible Blade glitching open and closed.
- Massively increased cool down of Gore Nest Spawns and added a max of 3 waves per gore nest.
- Halved all demons (expect the Icon of Sin) follow ranges to 25, in line with vanilla mobs.
- Fixed weapons not being able to reload with ammo in the off hand.
- Fixed Marauder Axe not being reloadable with the Argent Blocks like the Crucible.
- More Goal related null checks added because bad "performance" mods.
- Prowler now teleports after attacking.
- Pain Elemental attacking animation updated to match new style.
- Hell Knight 2016/Dread Knight now perform a slam attack.
- Dread Knight Hand Blades redone.
- Gargoyle flying redone, will now stay in the air.
- Added Ghast Tears to the drops of the boss tier demons loot tables.
- BFG now properly hurting the Ender Dragon.
- Icon of Sin blocks now face the proper way when built and look correct.
- Icon of Sin drops Argent Blocks instead of Energy, making the cost very worth it to summon.
- Icon of Sin no longer takes suffocation damage.
- Icon of Sin attack pattern has been redone.
- Slight weapon tweaks.
- Fixed Marauder attacks.
- Fixed E1M1 music disc playing text.
- Removed targeting stuff, hated it tbh and no one used it much.

*   : Edited from: Last Structure here: https://www.planetminecraft.com/project/5-city-center-nether-portal-designs/
**  : Edited from: https://www.planetminecraft.com/project/japanese-hannya-mask-nether-portal-castle-entrance-build-idea/
*** : Edited from: https://www.planetminecraft.com/project/minecraft-nether-gate-world-download/

## Not yet implemented but assets and code are in-process awaiting creation of models ## 
	- Baron 2016
	- Fireborne Baron
	- Armored Baron
	- Doom Hunter
	- Mother Demon
	- Maykr Drones
	- Blood Maykrs
	- Arch Makyr
## Not yet implemented but assets and code are in-process awaiting creation of models ## 